add endpoints for checking exercises
